                  "Window Shade Up"
                  "Window Shade Down"

       [ I do not know how OpenStep handles this, but I think it is 
         a feature that the bounding box (when dragging a shaded window
         in transparent mode) shows the original size! ]

       Hopefully kcmkwm will soon support this feature, too.

     - new windowPlacement=cascade (Cristian Tibirna)
     - small bugfix for FreeBSD (Marc van Kempen)
     - menuButton (if defined) on the top

  patchlevel 26:
     - fixed double click problem with java/motif on some X-Servers

  patchlevel 25:
     - smart placement (Cristian Tibirna)
     - "Window Activate" sound event (I simply forgot this one...)
     - more fixes for the sound events

  patchlevel 24:
       - supports the following commands in addition:

     refreshScreen, darkenScreen, logout, commandLine, taskManager,
     configure, winMove, winResize, winMaximize, winRestore,
     winIconify, winClose, winSticky, winOperations, desktop1,
     desktop2, desktop3, desktop4, desktop5, desktop6, desktop7,
     desktop8, desktop+1, desktop+2, desktop-1, desktop-2, desktop%2


  patchlevel 23:
       - support for KDE SOUND EVENTS.
         raises: 
                  "Window Iconify"
                  "Window DeIconify"
                  "Window Maximize"
                  "Window UnMaximize"
                  "Window Sticky"
                  "Window UnSticky"
                  "Window New"
                  "Window Delete"
                  "Window Trans New"
                  "Window Trans Delete"
                  "Logout"
                  "Logout Message"
                  "Window Move Start"
                  "Window Move End"
                  "Window Resize Start"
                  "Window Resize End"

      Also passes KDE_SOUND_EVENT, KDE_REGISTER_SOUND_EVENT and
      KDE_UNREGISTER_SOUND_EVENT to the modules. REGISTER-events are
      stored. That means it is possible to launch the sound module after